# lottie-qml

./: CMakeLists.txt  README.md  tester.qml
src/: CMakeLists.txt
src/qml/: LottieAnimation.qml  qmldir
src/qml/private/: lottie_shim.js
